# SentimentDashboard

./: README.md  Untitled-1.ipynb  app.py  docker-compose.yaml  init.sql  lexicon_fix.csv  pyproject.toml  sentiment.py
static/: style.css
templates/: index.html  news.html  yield.html
